src/app/components/global/navbar.module.css
.navigation {
    background-color: #0E1A6A;
    color: #fff;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .8);
    padding: 4px 4px 0px 4px;
    height: 8vh;
    display: flex;
    justify-content: space-between;
    text-transform: uppercase;
    margin: 0 auto;
    z-index: 2;
    align-self: center;

    @media (max-width: 768px) {
        justify-content: space-between;
        position: sticky;
        height: 8vh;
        top: 0;
        left: 0;
        right: 0;
        left: 0;
    }
}

.logoContainer {
    padding: 12px 12px;
}

.logoContainer a {
    text-decoration: none;
    color: #fff;
}

.toggle {
    display: none;
    height: 100%;
    cursor: pointer;
    padding: 0 10vw;

    @media (max-width: 768px) {
        display: flex;
        border: 2px dashed green;
    }
}

.hamburger {
    background-color: #111;
    width: 30px;
    height: 3px;
    transition: all 0.3s linear;
    align-self: center;
    position: relative;
}

.hamburger:before,
.hamburger:after {
    width: 30px;
    height: 3px;
    background-color: #111;
    content: "";
    position: absolute;
    transition: all 0.3s linear;
}

.hamburger:before {
    transform: translateY(-8px); 
    top: 0;
}

.hamburger:after {
    opacity: 1;
    transform: translateY(8px); 
    top: 0;
}

.hamburgerOpen {
    background-color: #111;
    width: 30px;
    height: 3px;
    transition: all 0.3s linear;
    align-self: center;
    position: relative;
    transform: rotate(-45deg);
}

.hamburgerOpen:before,
.hamburgerOpen:after {
    width: 30px;
    height: 3px;
    background-color: #111;
    content: "";
    position: absolute;
    transition: all 0.3s linear;
}

.hamburgerOpen:before {
    transform: rotate(-90deg) translate(-10px, 0px);
    top: -10px;
}

.hamburgerOpen:after {
    opacity: 0;
    transform: rotate(-90deg);
    top: 0;
}

.navLinkContainer {
    border: 2px dashed red;
    padding: 0px 12px;
    display: flex;
    height: 100%;
    justify-content: flex-end;
    align-items: center;

    @media (max-width: 768px) {
        flex-direction: column;
        position: fixed;
        width: 100%;
        justify-content: flex-start;
        padding-top: 10vh;
        background-color: #0E1A6A;
        transition: all 0.3s ease-in;
        top: 8vh;
        left: -100%;
    }
}

.navLinkContainerOpen {
    left: 0;
}

.navLinks {
    list-style-type: none;
    display: flex;
    column-gap: 6px;
    margin-right: 18px;
    text-decoration: none;
    color: #fff;
    display: inline-block;
    white-space: nowrap;
    margin: 0 0.42vw;
    transition: all 200ms ease-in;
    position: relative;

    @media (max-width: 768px) {
        padding-top: 4px;
    }
}


.navLinks a:hover {
    color: #559DF8;
}

.navLinks a:after {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 0%;
    content: ".";
    color: transparent;
    background: #fcb2a9;
    height: 1px;
    transition: all 0.4s ease-in;
}

.navLinks:hover a:after {
    width: 100%;
}

